# ai-commit-to-compliant

./: .gitignore  ARCH.md  PLAN.md  PRODUCT_BRIEF.md  QA_MATRIX.md  README.md  RISKS_MITIGATIONS.md  TODO.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: Dockerfile  alembic.ini  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: __init__.py
apps/backend/app/api/v1/endpoints/: auth.py  blueprints.py  dashboards.py  enterprise.py  pipelines.py  projects.py  releases.py  runs.py
apps/backend/app/core/: config.py  database.py  middleware.py
apps/backend/app/models/: __init__.py  audit.py  base.py  org.py  project.py
apps/backend/app/services/: cicd_service.py  compliance_service.py  cost_service.py  dashboard_service.py  kubernetes_service.py  plan_service.py  readiness_service.py  release_service.py  risk_service.py  rollback_service.py  secrets_service.py  supply_chain_service.py  terraform_service.py
apps/frontend/: next.config.js  package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/projects/[id]/plan/: page.tsx
apps/frontend/src/app/projects/[id]/readiness/: page.tsx
apps/frontend/src/app/projects/[id]/release/: page.tsx
apps/frontend/src/components/: AppShell.tsx
apps/frontend/src/lib/: api.ts  auth.tsx  theme.ts
apps/workers/: Dockerfile  main.py  package.json  pyproject.toml
apps/workers/agents/: __init__.py  base.py  cicd.py  iac.py  perf.py  release.py  repo_auditor.py  rollback.py  security.py  test.py
apps/workers/core/: config.py  events.py
docs/runbooks/: README.md  cost-spike.md  deployment-rollback.md
observability/: prometheus.yml
scripts/: init-db.sql
