[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prodsprints-workers"
version = "0.1.0"
description = "ProdSprints AI Worker Agents"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "nats-py>=2.6.0",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "python-terraform>=0.10.1",
    "gitpython>=3.1.40",
    "docker>=6.1.3",
    "kubernetes>=28.1.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.7",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
